Minor UI Changes

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,17 +7,30 @@
     android:background="@color/colorPrimary"
     tools:context=".activity.LoginActivity">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        android:id="@+id/iv_login_header"
+        android:src="@drawable/ic_chef"
+        android:scaleType="centerCrop"
+        />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:id="@+id/btn_skip"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/space_10"
-        android:layout_marginEnd="@dimen/space_8"
         android:text="@string/skip"
+        android:textSize="@dimen/font_4"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:background="@color/black"
+        android:fontFamily="@font/metropolis_regular"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/space_12"
+        android:layout_marginEnd="@dimen/space_8"
+        android:background="@drawable/ic_rounded_80_corner"
+        android:backgroundTint="#66000000"
         />
 
     <com.soumya.wwdablu.phoneinputext.PhoneInputExt
@@ -25,7 +38,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/pi_phone_number"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/space_65"
+        android:layout_marginTop="@dimen/space_67"
         android:layout_marginStart="@dimen/space_8"
         android:layout_marginEnd="@dimen/space_8"
         app:dataMode="fetch"
@@ -35,15 +48,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_get_otp"
+        android:text="@string/send_otp"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:fontFamily="@font/metropolis_semibold"
         android:layout_marginTop="@dimen/space_5"
         android:layout_marginStart="@dimen/space_8"
         android:layout_marginEnd="@dimen/space_8"
         android:layout_below="@id/pi_phone_number"
-        android:background="@color/black"
-        android:textColor="@color/white"
-        android:textAllCaps="false"
-        android:text="@string/send_otp"
-        android:fontFamily="@font/metropolis_regular"
+        android:background="@drawable/ic_rounded_corner"
+        android:backgroundTint="@color/black"
         />
 
     <FrameLayout
@@ -83,15 +97,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_continue_with_email"
+        android:text="@string/continue_with_email"
+        android:textAllCaps="false"
+        android:fontFamily="@font/metropolis_semibold"
+        android:drawableStart="@drawable/ic_email"
         android:layout_below="@id/fl_divider_container"
         android:layout_marginTop="@dimen/space_5"
         android:layout_marginStart="@dimen/space_8"
         android:layout_marginEnd="@dimen/space_8"
-        android:background="@color/tyrolean"
-        android:textAllCaps="false"
-        android:fontFamily="@font/metropolis_regular"
-        android:text="@string/continue_with_email"
-        android:drawableStart="@drawable/ic_email"
+        android:background="@drawable/ic_rounded_corner"
+        android:backgroundTint="@color/tyrolean"
         android:paddingStart="@dimen/space_5"
         android:paddingEnd="@dimen/space_5"
         />
@@ -112,13 +127,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/btn_login_by_fb"
-            android:layout_weight="1"
-            android:background="@color/tyrolean"
-            android:textAllCaps="false"
-            android:fontFamily="@font/metropolis_regular"
-            android:layout_marginEnd="@dimen/space_2"
             android:text="@string/facebook"
+            android:fontFamily="@font/metropolis_semibold"
+            android:textAllCaps="false"
             android:drawableStart="@drawable/ic_facebook"
+            android:layout_weight="1"
+            android:background="@drawable/ic_rounded_corner"
+            android:backgroundTint="@color/tyrolean"
+            android:layout_marginEnd="@dimen/space_2"
             android:paddingStart="@dimen/space_5"
             android:paddingEnd="@dimen/space_5"
             />
@@ -127,13 +143,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/btn_login_by_google"
-            android:layout_weight="1"
-            android:background="@color/tyrolean"
-            android:textAllCaps="false"
-            android:fontFamily="@font/metropolis_regular"
-            android:layout_marginStart="@dimen/space_2"
             android:text="@string/google"
+            android:fontFamily="@font/metropolis_semibold"
+            android:textAllCaps="false"
             android:drawableStart="@drawable/ic_google"
+            android:layout_weight="1"
+            android:background="@drawable/ic_rounded_corner"
+            android:backgroundTint="@color/tyrolean"
+            android:layout_marginStart="@dimen/space_2"
             android:paddingStart="@dimen/space_5"
             android:paddingEnd="@dimen/space_5"
             />
