--- a/app/src/main/res/layout/activity_location_access.xml
+++ b/app/src/main/res/layout/activity_location_access.xml
@@ -22,11 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_hi_there"
-        android:layout_marginTop="@dimen/space_2"
         android:text="@string/hi_nice_to_meet_you"
+        android:textSize="@dimen/font_5"
         android:fontFamily="@font/metropolis_semibold"
         android:textColor="@color/black"
-        android:textSize="@dimen/font_5"
+        android:layout_marginTop="@dimen/space_2"
         android:layout_gravity="center"
         android:layout_below="@id/iv_access_location"
         android:layout_centerHorizontal="true"
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_set_your_location"
         android:text="@string/set_your_location"
+        android:textSize="@dimen/font_3.5"
         android:fontFamily="@font/metropolis_regular"
         android:textColor="@color/black"
         android:textAllCaps="false"
@@ -54,11 +55,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_auto_location"
-        android:background="@color/colorPrimary"
         android:text="@string/use_current_location"
+        android:textSize="@dimen/font_4"
         android:textColor="@color/white"
         android:fontFamily="@font/metropolis_regular"
         android:textAllCaps="false"
+        android:background="@drawable/ic_rounded_corner"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_marginTop="@dimen/space_10"
         android:layout_marginStart="@dimen/space_5"
         android:layout_marginEnd="@dimen/space_5"
@@ -70,6 +73,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_set_manual_location"
         android:text="@string/set_your_location_manually"
+        android:textSize="@dimen/font_4"
         android:fontFamily="@font/metropolis_regular"
         android:textColor="@color/colorPrimary"
         android:textAllCaps="false"
@@ -90,6 +94,7 @@
         android:id="@+id/tv_location_disclaimer"
         android:text="@string/location_disclaimer"
         android:fontFamily="@font/metropolis_medium"
+        android:textSize="@dimen/font_3"
         android:textColor="@color/gray"
         android:textAllCaps="false"
         android:textAlignment="center"
